--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
 		"prettier": "^2.7.1",
 		"ts-jest": "^29.0.3",
 		"typescript": "^4.8.4"
-	}
+	},
+	"peerDependencies": {
+		"prettier": "^2.0.0"
+	  }
 }
