--- a/package.json
+++ b/package.json
@@ -27,16 +27,15 @@
 		"watch": "npm run build -- --watch",
 		"test": "jest --verbose",
 		"test:watch": "jest --watch --verbose",
-		"publish:release": "npm run test && npm run build && npm publish",
-		"publish:beta": "npm run test && npm run build && npm publish --tag beta"
+		"publish:release": "npm run test && npm run build && npm publish"
 	},
 	"devDependencies": {
 		"@babel/preset-typescript": "^7.18.6",
-		"@types/jest": "^29.2.2",
+		"@types/jest": "^29.2.3",
 		"jest": "^29.3.1",
-		"prettier": "^2.7.1",
+		"prettier": "^2.8.0",
 		"ts-jest": "^29.0.3",
-		"typescript": "^4.8.4"
+		"typescript": "^4.9.3"
 	},
 	"peerDependencies": {
 		"prettier": "^2.0.0"
