--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,5 +17,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+      - run: npm install
       - run: npm run build
-      - run: npm test
+      - run: npm run test
