--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
 	"scripts": {
 		"build": "tsc",
 		"watch": "npm run build -- --watch",
-		"test": "jest --verbose",
+		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
 		"test:watch": "jest --watch --verbose",
 		"publish:release": "npm run test && npm run build && npm publish"
 	},
 	"devDependencies": {
-		"@babel/preset-typescript": "^7.21.5",
-		"@types/jest": "^29.5.1",
-		"jest": "^29.5.0",
-		"prettier": "^2.8.8",
-		"ts-jest": "^29.1.0",
-		"typescript": "^5.0.4"
+		"@babel/preset-typescript": "^7.22.5",
+		"@types/jest": "^29.5.3",
+		"jest": "^29.6.2",
+		"prettier": "^3.0.1",
+		"ts-jest": "^29.1.1",
+		"typescript": "^5.1.6"
 	},
 	"peerDependencies": {
-		"prettier": "^2.0.0"
+		"prettier": "^3.0.0"
 	}
 }
