--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
 		"outDir": "./lib",
-		"target": "ES6",
-		"module": "commonjs",
+		"target": "esnext",
+		"module": "NodeNext",
 		"moduleResolution": "node",
 		"lib": ["esnext"],
 		"declaration": true,
