feat: json changes

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
-      - run: npm install -f
-      - run: npm run build
-      - run: npm run test
+          cache: "yarn"
+      - run: yarn
+      - run: yarn build
+      - run: yarn test
