--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 	"main": "lib/index.js",
 	"scripts": {
 		"build": "tsc",
-		"watch": "npm run build -- --watch",
-		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
+		"dev": "ts-node ./src/index.ts",
+		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose test",
 		"test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --verbose",
 		"prepublishOnly": "npm run test && npm run build"
 	},
@@ -35,9 +35,11 @@
 		"jest": "^29.7.0",
 		"prettier": "^3.3.1",
 		"ts-jest": "^29.1.4",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.4.5"
 	},
 	"peerDependencies": {
 		"prettier": "^3.0.0"
-	}
+	},
+	"packageManager": "yarn@4.3.1"
 }
