--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,15 @@
     "strict": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "typeRoots": ["src/typing/typing", "./node_modules/@types"],
   },
   "include": [
     "src/**/*"
   ],
   "exclude": [
     "node_modules",
-    "test"
+    "test",
+    "*.test.*",
   ]
 }
