--- a/package.json
+++ b/package.json
@@ -1,50 +1,53 @@
 {
-	"name": "prettier-plugin-jinja-json-template",
-	"version": "0.0.1",
-	"description": "Prettier plugin for formatting jinja json templates.",
-	"author": "David Odenwald, Bystray Stepan",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/NeoRu4/prettier-plugin-jinja-json-template"
-	},
-	"bugs": {
-		"url": "https://github.com/NeoRu4/prettier-plugin-jinja-json-template/issues"
-	},
-	"homepage": "https://github.com/davidodenwald/prettier-plugin-jinja-template#readme",
-	"keywords": [
-		"prettier",
-		"plugin",
-		"template",
-		"json",
-		"jinja",
-		"jinja2",
-		"flask"
-	],
-	"main": "lib/index.js",
-	"scripts": {
-		"build": "tsc",
-		"dev": "ts-node ./src/index.ts",
-		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose test",
-		"test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --verbose",
-		"prepublishOnly": "npm run test && npm run build"
-	},
-	"devDependencies": {
-		"@babel/preset-typescript": "^7.24.7",
-		"@eslint/js": "^9.7.0",
-		"@types/eslint": "^9",
-		"@types/jest": "^29.5.12",
-		"eslint": "9.x",
-		"globals": "^15.8.0",
-		"jest": "^29.7.0",
-		"prettier": "^3.3.3",
-		"ts-jest": "^29.1.4",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.4.5",
-		"typescript-eslint": "^7.17.0"
-	},
-	"peerDependencies": {
-		"prettier": "^3.0.0"
-	},
-	"packageManager": "yarn@4.3.1"
+  "name": "prettier-plugin-jinja-json-template",
+  "version": "0.0.1",
+  "description": "Prettier plugin for formatting jinja json templates.",
+  "author": "David Odenwald, Bystray Stepan",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NeoRu4/prettier-plugin-jinja-json-template"
+  },
+  "bugs": {
+    "url": "https://github.com/NeoRu4/prettier-plugin-jinja-json-template/issues"
+  },
+  "homepage": "https://github.com/NeoRu4/prettier-plugin-jinja-json-template#readme",
+  "keywords": [
+    "prettier",
+    "plugin",
+    "template",
+    "json",
+    "jinja",
+    "jinja2",
+    "flask"
+  ],
+  "main": "dist/cjs/index.js",
+  "module": "dist/index.js",
+  "source": "src/index.ts",
+  "scripts": {
+    "build": "rollup -c",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose test",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --verbose"
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
+    "@eslint/js": "^9.7.0",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/eslint": "^9",
+    "@types/jest": "^29.5.12",
+    "eslint": "9.x",
+    "globals": "^15.8.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "rollup": "^4.19.0",
+    "ts-jest": "^29.1.4",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.6.3",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.17.0"
+  },
+  "peerDependencies": {
+    "prettier": "^3.0.0"
+  },
+  "packageManager": "yarn@4.3.1"
 }
