--- a/package.json
+++ b/package.json
@@ -24,23 +24,25 @@
 	"main": "lib/index.js",
 	"scripts": {
 		"build": "tsc",
+		"build:regex": "babel src/regex_editable.ts -o src/regex.ts",
 		"watch": "npm run build -- --watch",
 		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
 		"test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --verbose",
 		"prepublishOnly": "npm run test && npm run build"
 	},
 	"devDependencies": {
+		"@babel/cli": "^7.25.6",
+		"@babel/core": "^7.25.2",
 		"@babel/preset-typescript": "^7.24.7",
 		"@types/jest": "^29.5.12",
+		"babel-plugin-transform-regex": "^4.3.1",
 		"jest": "^29.7.0",
 		"prettier": "^3.3.1",
+		"regex": "^4.3.2",
 		"ts-jest": "^29.1.4",
 		"typescript": "^5.4.5"
 	},
 	"peerDependencies": {
 		"prettier": "^3.0.0"
-	},
-	"dependencies": {
-		"regex": "^4.3.2"
 	}
 }
