--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
 		"strict": true
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules", "test"]
+	"exclude": ["node_modules", "test", "src/regex_editable.ts"]
 }
