--- a/package.json
+++ b/package.json
@@ -26,21 +26,20 @@
 		"build": "tsc",
 		"build:regex": "babel src/regex_editable.ts -o src/regex.ts",
 		"watch": "npm run build -- --watch",
-		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
-		"test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --verbose",
+		"test": "vitest run",
+		"test:watch": "vitest",
 		"prepublishOnly": "npm run test && npm run build"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.27.0",
 		"@babel/core": "^7.26.10",
 		"@babel/preset-typescript": "^7.27.0",
-		"@types/jest": "^29.5.14",
+		"@types/node": "^24.3.0",
 		"babel-plugin-transform-regex": "^6.0.1",
-		"jest": "^29.7.0",
 		"prettier": "^3.5.3",
 		"regex": "^6.0.1",
-		"ts-jest": "^29.3.2",
-		"typescript": "^5.8.3"
+		"typescript": "^5.8.3",
+		"vitest": "^3.2.4"
 	},
 	"peerDependencies": {
 		"prettier": "^3.0.0"
